--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "commonjs",
       "esModuleInterop": true,
       "target": "es6",
-      "noImplicitAny": true,
+      "noImplicitAny": false,
       "moduleResolution": "node",
       "sourceMap": true,
       "outDir": "dist",
@@ -12,7 +12,7 @@
           "*": [
               "node_modules/*"
           ]
-      }
+      },
   },
   "include": [
       "src/**/*"
