--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/superagent": "^4.1.10",
     "@types/twit": "^2.2.28",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "superagent": "^6.1.0",
     "twit": "^2.2.11"
   },
   "devDependencies": {
