--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
+    "node-cron": "^3.0.0",
     "superagent": "^6.1.0",
-    "twit": "^2.2.11",
-    "http-status-codes": "^2.1.4"
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
