--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
   },
   "include": [
       "src/**/*"
-  ]
+  ],
+  "exclude" : [
+    "node_modules"  /* exclude everything in  node_modules */
+    ]
 }
