--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^14.14.34",
     "@types/superagent": "^4.1.10",
     "@types/twit": "^2.2.28",
+    "@types/node-cron": "^2.0.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
